-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206206 | 12 | Roland Westrelin | P2 | Resolved | Fixed | b01 |
| JDK-8206683 | 11.0.1 | Roland Westrelin | P2 | Resolved | Fixed | b01 |
Crash:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src/hotspot/share/opto/loopPredicate.cpp:144), pid=27204, tid=1818
# assert(opcode == Op_RangeCheck) failed: no other if variant here
#
# JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-jdk11-jdk.902)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-jdk11-jdk.902, mixed mode, tiered, compressed oops, parallel gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to JTwork/scratch/0/core.27204)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src/hotspot/share/opto/loopPredicate.cpp:144), pid=27204, tid=1818
# assert(opcode == Op_RangeCheck) failed: no other if variant here
#
# JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-jdk11-jdk.902)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-jdk11-jdk.902, mixed mode, tiered, compressed oops, parallel gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to JTwork/scratch/0/core.27204)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
- backported by
-
JDK-8206206 assert(opcode == Op_RangeCheck) failed: no other if variant here
-
- Resolved
-
-
JDK-8206683 assert(opcode == Op_RangeCheck) failed: no other if variant here
-
- Resolved
-
- relates to
-
JDK-8203197 C2: consider all paths in loop body for loop predication
-
- Resolved
-
-
JDK-8214994 C2 Compiler enters infinite loop and consumes infinite memory until crash
-
- Closed
-