8205515: assert(opcode == Op_RangeCheck) failed: no other if variant here

Reviewed-by: thartmann, kvn